<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        >

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <LinearLayout
                        android:id="@+id/btn_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            app:srcCompat="@drawable/ic_share"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.idea.zad.component.CustomBtn
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share"
                            android:textColor="@color/black"
                            android:layout_weight="1.0"
                            android:textSize="@dimen/common_text_size"
                            android:background="@color/transparent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <ImageView
                            app:srcCompat="@drawable/ic_copy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <com.idea.zad.component.CustomBtn
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/copy"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/black"
                            android:background="@color/transparent"
                            />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <LinearLayout
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/iv_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:srcCompat="@drawable/ic_favorite_on"
                            />

                        <com.idea.zad.component.CustomBtn
                            android:id="@+id/tv_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/favorite"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:background="@color/transparent"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btn_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        >

                        <ImageView
                            app:srcCompat="@drawable/ic_edit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.idea.zad.component.CustomBtn
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:textSize="@dimen/common_text_size"
                            android:textColor="@color/black"
                            android:background="@color/transparent"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>